syntax = "proto3";
package components.errors.v1;
option go_package = "github.com/mar-coding/personalWebsiteBackend/APIs/proto-gen/components/errors/v1;errors";

message ErrorServiceDetails {
  uint32 service_code = 1;
  string service_name = 2;
  string service_version = 3;
  string domain = 4;
}
